--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <version>17.1.15</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.silentsoft</groupId>
+            <artifactId>silentsoft-ui</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
