--- a/pom.xml
+++ b/pom.xml
@@ -40,17 +40,11 @@
             <version>${kordamp.ikonli.version}</version>
         </dependency>
         <!--仪表盘、统计图 ：https://github.com/HanSolo/tilesfx-->
-        <dependency>
+<!--        <dependency>
             <groupId>eu.hansolo</groupId>
             <artifactId>tilesfx</artifactId>
             <version>17.1.15</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.silentsoft</groupId>
-            <artifactId>silentsoft-ui</artifactId>
-            <version>1.3.0</version>
-        </dependency>
+        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.silentsoft/silentsoft-ui -->
         <dependency>
